# flowvex

./: .env.example  .gitignore  Cargo.toml  FEATURE_UPDATE_NODE_RESULTS.md  NODE_EXECUTION_RESULT_FEATURE.md  README.md
crates/ai-service/: Cargo.toml
crates/ai-service/src/: client.rs  injection.rs  lib.rs  models.rs  prompt.rs  tools.rs
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: cache.rs  failover.rs  file_service.rs  lib.rs  load_balancer.rs  logger.rs  main.rs  metrics.rs  pool.rs  proxy.rs  rate_limiter.rs  server.rs  user_service.rs  websocket.rs
crates/audit-service/: Cargo.toml
crates/audit-service/src/: export.rs  lib.rs  logger.rs  query.rs  storage.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  types.rs
crates/integration-service/: Cargo.toml
crates/integration-service/src/: credentials.rs  integrations.rs  lib.rs  oauth.rs  retry.rs
crates/rbac-service/: Cargo.toml
crates/rbac-service/src/: auth.rs  jwt.rs  lib.rs  middleware.rs  permissions.rs  roles.rs
crates/scraper-service/: Cargo.toml
crates/scraper-service/src/: browser.rs  error.rs  executor.rs  lib.rs  types.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: executor.rs  lib.rs  parser.rs  scheduler.rs  validator.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentExecutionViewer.tsx  ContextMenu.tsx  ElementPicker.tsx  FloatingNodePalette.tsx  FloatingSidebar.tsx  Header.tsx  Icon.tsx  LinkPicker.tsx  Logo.tsx  MergeNodesDialog.tsx  MergeNodesModal.tsx  NewWorkflowModal.tsx  NodeConfigPanel.tsx  NodePalette.tsx  ScraperTemplateSelector.tsx  Sidebar.tsx  UserMenu.tsx  WorkflowCanvas.tsx  WorkflowList.tsx
frontend/src/components/NodeConfigPanel/: AgentNodeConfig.tsx  AgentResourceConfig.tsx  AgentRuleConfig.tsx  AgentToolConfig.tsx  JsonProcessorConfig.tsx  PortsSection.tsx  ScraperNodeConfig.tsx  SelectorConfig.tsx  index.ts
frontend/src/components/common/: KeyboardShortcuts.tsx  ModelSelector.tsx  Toast.tsx  VariableInput.tsx
frontend/src/components/nodes/: AINode.tsx  BaseNode.tsx  DisplayNode.tsx  GroupNode.tsx  NodeExecutionResult.tsx  OutputNode.tsx  TriggerNode.tsx  TypedPort.tsx  index.tsx
frontend/src/components/settings/: AISettingsModal.tsx
frontend/src/constants/: agentNodeTemplates.ts  index.ts  nodeTemplates.ts  scraperNodeTemplates.ts  scraperTemplates.ts
frontend/src/hooks/: index.ts  useConnectionValidator.ts
frontend/src/pages/: AuthPage.tsx  Dashboard.tsx  WorkflowEditor.tsx
frontend/src/services/: agentExecutor.ts  aiService.ts  aiTestService.ts  authService.ts  index.ts  scraperApi.ts  scraperExecutor.ts
frontend/src/stores/: aiSettingsStore.ts  authStore.ts  variableStore.ts  workflowStore.ts
frontend/src/styles/: theme.css
frontend/src/types/: ai-settings.ts  data-packet.ts  data-types.ts  index.ts  workflow.ts
frontend/src/utils/: index.ts  type-checker.ts  type-converter.ts
migrations/: 001_initial_schema.sql  002_scraper_tables.sql  README.md
scraper-server/: package-lock.json  package.json  server.js
