[workspace]
members = [
    "crates/workflow-engine",
    "crates/api-gateway",
    "crates/integration-service",
    "crates/rbac-service",
    "crates/audit-service",
    "crates/common",
    "crates/ai-service",
    "crates/scraper-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AI Workflow Platform Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# JWT
jsonwebtoken = "9.3"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"

# Caching
moka = { version = "0.12", features = ["future"] }

# Rate limiting
governor = "0.7"

# gRPC
tonic = "0.12"
prost = "0.13"

# Testing
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
