[package]
name = "scraper-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# HTTP client (for potential Playwright HTTP API)
reqwest = { workspace = true }

# Common types
common = { path = "../common" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
